[tool.poetry]
name = "welcome-project"
version = "0.1.0"
description = ""
authors = ["Andrey Matveev <ra1ze.matveev@yandex.ru>",]
readme = "README.md"
packages = [{include = "welcome_project"}]


[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
